src/project/snapshots/pixi__project__tests__activation_scripts-2.snap
---
source: src/project/mod.rs
expression: "project.activation_scripts(Platform::Win64).unwrap()"
---
[
    "Cargo.lock",
]
