src/project/snapshots/pixi__project__tests__activation_scripts-3.snap
---
source: src/project/mod.rs
expression: "project.activation_scripts(Platform::OsxArm64).unwrap()"
---
[
    "pixi.toml",
    "pixi.lock",
]
