src/project/snapshots/pixi__project__tests__dependency_set_with_build_section.snap
---
source: src/project/mod.rs
expression: "format_dependencies(project.default_environment().environment_dependencies(Some(Platform::Linux64)))"
---
foo = "==1.0"
