src/project/snapshots/pixi__project__tests__dependency_sets.snap
---
source: src/project/mod.rs
assertion_line: 589
expression: "project.all_dependencies(Platform::Linux64).unwrap()"
---
{
    "foo": NamelessMatchSpec {
        version: Some(
            Operator(
                Equals,
                Version {
                    norm: Some(
                        "1.0",
                    ),
                    version: "[[0], [1], [0]]",
                    local: "[]",
                },
            ),
        ),
        build: None,
        build_number: None,
        file_name: None,
        channel: None,
        subdir: None,
        namespace: None,
        md5: None,
        sha256: None,
    },
    "libc": NamelessMatchSpec {
        version: Some(
            Operator(
                Equals,
                Version {
                    norm: Some(
                        "2.12",
                    ),
                    version: "[[0], [2], [12]]",
                    local: "[]",
                },
            ),
        ),
        build: None,
        build_number: None,
        file_name: None,
        channel: None,
        subdir: None,
        namespace: None,
        md5: None,
        sha256: None,
    },
    "bar": NamelessMatchSpec {
        version: Some(
            Operator(
                Equals,
                Version {
                    norm: Some(
                        "1.0",
                    ),
                    version: "[[0], [1], [0]]",
                    local: "[]",
                },
            ),
        ),
        build: None,
        build_number: None,
        file_name: None,
        channel: None,
        subdir: None,
        namespace: None,
        md5: None,
        sha256: None,
    },
}
