src/project/snapshots/pixi__project__tests__mapping_check_also_feature_channels.snap
---
source: src/project/mod.rs
expression: project.pypi_name_mapping_source().unwrap_err()
---
Defined conda-pypi-map channel: non-existing-channel is missing from the channels, which are: conda-forge, pytorch
