src/project/snapshots/pixi__project__tests__remove_dependencies.snap
---
source: src/project/mod.rs
expression: project.manifest
---
ProjectManifest {
    project: ProjectMetadata {
        name: "foo",
        version: Some(
            Version {
                version: [[0], [0], [1], [0]],
                local: [],
            },
        ),
        description: None,
        authors: [],
        channels: [],
        platforms: PixiSpanned {
            span: Some(
                128..150,
            ),
            value: [
                Linux64,
                Win64,
            ],
        },
        license: None,
        license_file: None,
        readme: None,
        homepage: None,
        repository: None,
        documentation: None,
    },
    tasks: {},
    system_requirements: SystemRequirements {
        windows: None,
        unix: None,
        macos: None,
        linux: None,
        cuda: None,
        libc: None,
        archspec: None,
    },
    dependencies: {},
    host_dependencies: None,
    build_dependencies: None,
    target: {
        PixiSpanned {
            span: Some(
                223..229,
            ),
            value: Platform(
                Win64,
            ),
        }: TargetMetadata {
            dependencies: {
                "bar": NamelessMatchSpec {
                    version: Some(
                        Any,
                    ),
                    build: None,
                    build_number: None,
                    file_name: None,
                    channel: None,
                    subdir: None,
                    namespace: None,
                    md5: None,
                    sha256: None,
                },
            },
            host_dependencies: None,
            build_dependencies: None,
            activation: None,
            tasks: {},
        },
        PixiSpanned {
            span: Some(
                287..295,
            ),
            value: Platform(
                Linux64,
            ),
        }: TargetMetadata {
            dependencies: {},
            host_dependencies: None,
            build_dependencies: Some(
                {
                    "baz": NamelessMatchSpec {
                        version: Some(
                            Any,
                        ),
                        build: None,
                        build_number: None,
                        file_name: None,
                        channel: None,
                        subdir: None,
                        namespace: None,
                        md5: None,
                        sha256: None,
                    },
                },
            ),
            activation: None,
            tasks: {},
        },
    },
    activation: None,
    pypi_dependencies: PypiDependencies {
        requirements: {},
    },
}
