src/project/snapshots/pixi__project__tests__target_specific_tasks-2.snap
---
source: src/project/mod.rs
expression: "project.manifest.tasks(Some(Platform::Win64))"
---
{
    "test": Plain(
        "test win",
    ),
}
