src/project/snapshots/pixi__project__tests__target_specific_tasks-3.snap
---
source: src/project/mod.rs
expression: "project.manifest.tasks(Some(Platform::Linux64))"
---
{
    "test": Plain(
        "test linux",
    ),
}
