src/project/snapshots/pixi__project__tests__target_specific_tasks.snap
---
source: src/project/mod.rs
expression: "project.manifest.tasks(Some(Platform::Osx64), &FeatureName::Default).unwrap()"
---
{
    TaskName(
        "test",
    ): Plain(
        "test multi",
    ),
}
